# cmakelistsedit

./: CMakeLists.txt  README  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  QtFunctions.cmake  SingleSourceGroup.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  Main.cpp
src/cmd/: CMakeLists.txt  DefaultFileBuffer.cpp  DefaultFileBuffer.h  Main.cpp
src/main/: ByteArrayFileBuffer.cpp  CMakeLists.txt  CMakeListsFile.cpp  CMakeListsFile.h  CMakeListsFile_p.h  FileBuffer.cpp  FileBuffer.h  StandardFileBuffer.cpp  StandardFileBuffer.h
src/main/include/cmakelistsedit/: CMakeListsFile.h  FileBuffer.h  StandardFileBuffer.h
src/main/include/cmakelistsedit/parser/: CMakeFileContent.h
src/main/include/cmle/: ByteArrayFileBuffer.h  CMakeListsFile.h  FileBuffer.h  StandardFileBuffer.h
src/main/parser/: CMakeFileContent.cpp  CMakeFileContent.h  CMakeLists.txt  CMakeListsParser.cpp  CMakeListsParser.h  cmListFileLexer.c  cmListFileLexer.h
tests/: CMakeLists.txt
tests/cmd/: CMakeLists.txt  test_DefaultFileBuffer.cpp
tests/main/: CMakeLists.txt  test_CMakeListsFile.cpp  test_StandardFileBuffer.cpp
tests/res/: empty_source_block-add.cmake  empty_source_block.cmake  invalid_listsfile.cmake  invalid_source_block.cmake  no_source_block-add.cmake  no_source_block-default.cmake  no_source_block.cmake  two_source_blocks-add_bottom.cmake  two_source_blocks-add_top.cmake  two_source_blocks-add_top_sorted.cmake  two_source_blocks-different_prefix.cmake  two_source_blocks-no_prefix.cmake  two_source_blocks-no_prefix_sorted.cmake  two_source_blocks-partial_prefix_1.cmake  two_source_blocks-partial_prefix_2.cmake  two_source_blocks-remove_bottom.cmake  two_source_blocks-remove_bottom_sorted.cmake  two_source_blocks-remove_top.cmake  two_source_blocks-rename_bottom.cmake  two_source_blocks-rename_bottom_sorted.cmake  two_source_blocks-rename_top.cmake  two_source_blocks-same_prefix.cmake  two_source_blocks.cmake
